--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             height: 100px;
             padding: 20px;
             margin: 50px auto;
-            background-color: #aaa;
+            background-color: brown;
         }
     </style>
 </head>
