--- a/index.html
+++ b/index.html
@@ -1,32 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-     <link
-    rel="stylesheet"
-    href="libs/wow/animate.css"
-  />
+    <link rel="stylesheet" href="libs/wow/animate.css" />
     <style>
-
-        .container{
+        .container {
             width: 100px;
             height: 100px;
-            padding: 20px;
+            padding: 30px;
             margin: 50px auto;
-            background-color: brown;
+            background-color: blue;
         }
     </style>
 </head>
+
 <body>
     <div class="container wow bounceInUp">
 
     </div>
-    
-     <script src="libs/wow/wow.min.js"></script>
-              <script>
-              new WOW().init();
-              </script>
+
+    <script src="libs/wow/wow.min.js"></script>
+    <script>
+        new WOW().init();
+    </script>
 </body>
+
 </html>
