--- a/index.html
+++ b/index.html
@@ -21,6 +21,9 @@
     <div class="container wow bounceInUp">
 
     </div>
+    <footer>
+        iam basma
+    </footer>
 
     <script src="libs/wow/wow.min.js"></script>
     <script>
