--- a/index.html
+++ b/index.html
@@ -21,7 +21,9 @@
     <div class="container wow bounceInUp">
 
     </div>
-
+<footer>
+    iam mostafa
+</footer>
     <script src="libs/wow/wow.min.js"></script>
     <script>
         new WOW().init();
